fix projects responsiveness on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,7 +66,7 @@
 
     --badge-background: rgba(4, 13, 34);
     --badge-text: rgb(241, 255, 245);
-    --card-background: rgba(255, 255, 255, 0.5);
+    --card-background: rgba(68, 68, 68, 0.5);
 
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
